Remove guava #287
Task-Url: https://github.com/eclipse-mylyn/org.eclipse.mylyn/issues/287